--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Clown Cake + Gossip</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,500&family=Quicksand&display=swap" rel="stylesheet">
+  <title>Clown Cake + Gossip Session</title>
+  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Quicksand&display=swap" rel="stylesheet">
   <style>
     html, body {
       margin: 0;
@@ -47,44 +47,41 @@
     .invite {
       position: relative;
       z-index: 2;
-      background: #fff;
-      border: 2px solid #d60032;
-      border-radius: 24px;
-      padding: 32px 36px;
-      max-width: 420px;
+      background: #fff8fc;
+      border: 4px dashed hotpink;
+      padding: 30px 40px;
+      border-radius: 30px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      max-width: 400px;
+      text-align: center;
       margin: auto;
       margin-top: 10vh;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-      text-align: center;
     }
 
     .invite h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 2em;
+      font-family: 'Luckiest Guy', cursive;
+      font-size: 2.2em;
+      color: #ff4e99;
       margin-bottom: 10px;
-      color: #d60032;
     }
 
     .invite p {
-      margin: 12px 0;
-      font-size: 1.05em;
+      font-size: 1.1em;
+      margin: 10px 0;
     }
 
     .details {
+      background: #ffe3f3;
+      padding: 15px;
+      border-radius: 15px;
       margin-top: 20px;
-      font-size: 0.95em;
-      line-height: 1.6;
-      background: #fff5f7;
-      padding: 14px;
-      border-radius: 12px;
-      border: 1px dashed #d60032;
+      font-size: 1em;
     }
 
-    .footer {
-      margin-top: 24px;
-      font-size: 0.9em;
-      font-style: italic;
-      color: #b40028;
+    .rsvp {
+      margin-top: 20px;
+      font-weight: bold;
+      color: #d10063;
     }
   </style>
 </head>
@@ -92,17 +89,15 @@
   <div class="confetti" id="confetti-container"></div>
 
   <div class="invite">
-    <h1>Clown Cake + Gossip</h1>
-    <p>A low-stakes, high-tea kind of thing. Bring your stories, wear something unserious.</p>
-
+    <h1>Clown Cake + Gossip Session</h1>
+    <p>You’re officially invited to the silliest, sweetest, juiciest event of the week!</p>
     <div class="details">
-      <p><strong>Saturday · 5 PM</strong></p>
-      <p>Text for the addy</p>
-      <p>Optional: Red nose, silly socks, or dramatic eyeliner</p>
+      <p><strong>When:</strong> Saturday @ 5 PM</p>
+      <p><strong>Where:</strong> My place (text me for the addy)</p>
+      <p><strong>Dress Code:</strong> Cute, comfy, clown-coded</p>
     </div>
-
-    <div class="footer">
-      No drama allowed (unless it's funny).
+    <div class="rsvp">
+      RSVP or be haunted by gossip FOMO!
     </div>
   </div>
 
