--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
       background-color: #d60032;
       border-radius: 50%;
       opacity: 0.8;
-      animation: float 10s linear infinite;
+      animation: float linear infinite;
     }
 
     @keyframes float {
       0% {
-        transform: translateY(0) rotate(0deg);
-        opacity: 0.9;
+        transform: translateY(-20px) rotate(0deg);
+        opacity: 0.8;
       }
       100% {
-        transform: translateY(100vh) rotate(360deg);
+        transform: translateY(120vh) rotate(360deg);
         opacity: 0;
       }
     }
@@ -103,11 +103,14 @@
 
   <script>
     const confettiContainer = document.getElementById('confetti-container');
-    for (let i = 0; i < 40; i++) {
+    const confettiCount = 40;
+
+    for (let i = 0; i < confettiCount; i++) {
       const dot = document.createElement('div');
       dot.classList.add('dot');
       dot.style.left = `${Math.random() * 100}%`;
-      dot.style.animationDuration = `${6 + Math.random() * 5}s`;
+      dot.style.top = `-${Math.random() * 100}px`; // Start randomly above screen
+      dot.style.animationDuration = `${6 + Math.random() * 4}s`;
       dot.style.animationDelay = `${Math.random() * 5}s`;
       confettiContainer.appendChild(dot);
     }
