--- a/index.html
+++ b/index.html
@@ -30,16 +30,25 @@
       background-color: #d60032;
       border-radius: 50%;
       opacity: 0.8;
-      animation: float linear infinite;
+      animation: bounceFloat linear infinite;
     }
 
-    @keyframes float {
+    @keyframes bounceFloat {
       0% {
-        transform: translateY(-20px) rotate(0deg);
+        transform: translate(0, 0) rotate(0deg);
         opacity: 0.8;
       }
+      25% {
+        transform: translate(-10px, 30vh) rotate(90deg);
+      }
+      50% {
+        transform: translate(10px, 60vh) rotate(180deg);
+      }
+      75% {
+        transform: translate(-10px, 90vh) rotate(270deg);
+      }
       100% {
-        transform: translateY(120vh) rotate(360deg);
+        transform: translate(10px, 120vh) rotate(360deg);
         opacity: 0;
       }
     }
@@ -83,11 +92,25 @@
       font-weight: bold;
       color: #d10063;
     }
+
+    .clown-img {
+      width: 100px;
+      margin: 20px auto 0;
+      display: block;
+      animation: wiggle 2s infinite;
+    }
+
+    @keyframes wiggle {
+      0%, 100% { transform: rotate(-5deg); }
+      50% { transform: rotate(5deg); }
+    }
   </style>
 </head>
 <body>
+  <!-- Confetti -->
   <div class="confetti" id="confetti-container"></div>
 
+  <!-- Invitation Card -->
   <div class="invite">
     <h1>Clown Cake + Gossip Session</h1>
     <p>You’re officially invited to the silliest, sweetest, juiciest event of the week!</p>
@@ -99,8 +122,16 @@
     <div class="rsvp">
       RSVP or be haunted by gossip FOMO!
     </div>
+    <img class="clown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/Circus_clown_icon.png/600px-Circus_clown_icon.png" alt="clown" />
   </div>
 
+  <!-- Background music -->
+  <audio autoplay loop volume="0.2">
+    <source src="https://cdn.pixabay.com/download/audio/2022/10/03/audio_1d2c93b07f.mp3?filename=funny-clown-112965.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
+  <!-- Confetti script -->
   <script>
     const confettiContainer = document.getElementById('confetti-container');
     const confettiCount = 40;
@@ -108,10 +139,15 @@
     for (let i = 0; i < confettiCount; i++) {
       const dot = document.createElement('div');
       dot.classList.add('dot');
-      dot.style.left = `${Math.random() * 100}%`;
-      dot.style.top = `-${Math.random() * 100}px`; // Start randomly above screen
+
+      const left = Math.random() * 100;
+      const offset = Math.random() * -100;
+      dot.style.left = `${left}%`;
+      dot.style.transform = `translateY(${offset}px)`;
+
       dot.style.animationDuration = `${6 + Math.random() * 4}s`;
       dot.style.animationDelay = `${Math.random() * 5}s`;
+
       confettiContainer.appendChild(dot);
     }
   </script>
