--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
     <div class="rsvp">
       RSVP or be haunted by gossip FOMO!
     </div>
-    <img class="clown-img" src="https://i.imgur.com/HZ2R41t.png" alt="Clown" />
+    <img class="clown-img" src="https://res.cloudinary.com/dy5lzir1g/image/upload/v1712929292/clowny_jc2j6h.png" alt="Clown" />
   </div>
 
   <!-- Music -->
   <audio id="bg-music" preload="auto">
-    <source src="https://files.catbox.moe/bgbufj.mp3" type="audio/mpeg">
+    <source src="https://cdn.pixabay.com/download/audio/2022/10/03/audio_1d2c93b07f.mp3?filename=funny-clown-112965.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
   <div class="music-toggle" onclick="toggleMusic()">Play Music</div>
