--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   <!-- Music -->
   <audio id="bg-music" preload="auto">
-    <source src="https://cdn.pixabay.com/download/audio/2022/10/03/audio_1d2c93b07f.mp3?filename=funny-clown-112965.mp3" type="audio/mpeg">
+    <source src="tomoko chic - bubblegum 2024-11-19 21_46.m4a" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
   <div class="music-toggle" onclick="toggleMusic()">Play Music</div>
