--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   <!-- Music -->
   <audio id="bg-music" preload="auto">
-    <source src="tomoko chic - bubblegum 2024-11-19 21_46.m4a" type="audio/mpeg">
+    <source src="tomoko chic - bubblegum 2024-11-19 21_46.m4a" type="audio/m4a">
     Your browser does not support the audio element.
   </audio>
   <div class="music-toggle" onclick="toggleMusic()">Play Music</div>
