--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Clown Cake + Gossip Session</title>
+  <title>Cake + Gossip Session</title>
   <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Quicksand&display=swap" rel="stylesheet">
   <style>
     html, body {
@@ -130,12 +130,12 @@
     <h1>Clown Cake + Gossip Session</h1>
     <p>You’re officially invited to the silliest, sweetest, juiciest event of the week!</p>
     <div class="details">
-      <p><strong>When:</strong> Saturday @ 5 PM</p>
-      <p><strong>Where:</strong> My place (text me for the addy)</p>
-      <p><strong>Dress Code:</strong> Cute, comfy, clown-coded</p>
+      <p><strong>When:</strong> Sunday 27 April : 5 pm</p>
+      <p><strong>Where:</strong> Place</p>
+      <p><strong>Dress Code:</strong> Cute, your style and vibe</p>
     </div>
     <div class="rsvp">
-      RSVP or be haunted by gossip FOMO!
+      RSVP before Thursday 24 April!
     </div>
     <img class="clown-img" src="https://res.cloudinary.com/dy5lzir1g/image/upload/v1712929292/clowny_jc2j6h.png" alt="Clown" />
   </div>
