--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
   <!-- Invitation -->
   <div class="invite">
-    <h1>Clown Cake + Gossip Session</h1>
+    <h1>Cake + Gossip Session</h1>
     <p>You’re officially invited to the silliest, sweetest, juiciest event of the week!</p>
     <div class="details">
       <p><strong>When:</strong> Sunday 27 April : 5 pm</p>
