--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="rsvp">
       RSVP before Thursday 24 April!
     </div>
-    <img class="clown-img" src="https://res.cloudinary.com/dy5lzir1g/image/upload/v1712929292/clowny_jc2j6h.png" alt="Clown" />
+    <img class="clown-img" src="Clown.png" alt="Clown" />
   </div>
 
   <!-- Music -->
