--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cake + Gossip Session</title>
   <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Quicksand&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="invite.png">
   <style>
     html, body {
       margin: 0;
