--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <p>You’re officially invited to the silliest, sweetest, juiciest event of the week!</p>
     <div class="details">
       <p><strong>When:</strong> Sunday 27 April : 5 pm</p>
-      <p><strong>Where:</strong> Place</p>
+      <p><strong>Where:</strong> BEYT - Mar Mkhael</p>
       <p><strong>Dress Code:</strong> Cute, your style and vibe</p>
     </div>
     <div class="rsvp">
